# agy-statusbar

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.py  install.sh  plano_melhorias.md  prototipos_nerdfonts.md  pyproject.toml  statusline.py
tests/: test_install.py  test_statusline.py
